# sam-3d-objects

./: pyproject.toml
notebook/: inference.py
sam3d_objects/: __init__.py
sam3d_objects/pipeline/: inference_pipeline_pointmap.py
